# sat_gpt_generator

./: Dockerfile  README.md  category_const.py  chat_gpt.py  convert_csv.py  generate_passage.py  generate_sat_model.py  install_logs.txt  main.py  nohup.out  pyproject.toml  request_test.py  requirements.txt
.github/workflows/: deploy.yml
conjunctions.db/: chroma.sqlite3
data/: art.csv  literature.csv  science.csv  social_science.csv
sample/: SAT_1.csv  SAT_1_Reading Questions.csv  SAT_2_Reading Passages.csv  SAT_2_Reading Questions.csv  SAT_3_Reading Passages.csv  SAT_3_Reading Questions.csv  SAT_4_Reading Passages.csv  SAT_4_Reading Questions.csv  SAT_5.csv  SAT_5_Reading Questions.csv  SAT_6_Reading Passages.csv  SAT_6_Reading Questions.csv  test.csv  test1.csv
sample_xlsx/: SAT_1.xlsx  SAT_2.xlsx  SAT_3.xlsx  SAT_4.xlsx  SAT_5.xlsx  SAT_6.xlsx
sat-model/: conjunction.py  conjunction_vectorize.py  fill_in_the_blank.py
sat-model/conjunctions.db/: chroma.sqlite3
sat_model/: conjunction.py  conjunction_vectorize.py  fill_in_the_blank.py  find_subject.py  grammar.py
sat_model/conjunctions.db/: chroma.sqlite3
